src/client/styles.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color-scheme: light dark;

  --color-scheme: 0;
  --color00: #040608;
  --color10: #0a1a2a;
  --color20: #1a2a3a;
  --color30: #2a3a4a;
  --color40: #3e4e5e;
  --color50: #586878;
  --color60: #728292;
  --color70: #8d9dad;
  --color80: #a9b9c9;
  --color90: #b4c4e4;
  --color100: #fff;
  --color-accent50: #1c5d80;
  --color-accent60: #2c7da0;
  --color-accent80: #3596c0;

  --link-color: #4c9ce2;
  --link-color-hover: #386989;
}

@media (prefers-color-scheme: light) {
  :root {
    --color-scheme: 1;
    --color00: #fff;
    --color10: #f5f5f5;
    --color20: #e0e0e0;
    --color30: #b8b8b8;
    --color40: #999;
    --color50: #7a7a7a;
    --color60: #5c5c5c;
    --color70: #3d3d3d;
    --color80: #292929;
    --color90: #141414;
    --color100: #000;
    --color-accent50: #2881b1;
    --color-accent60: #41b6e9;
    --color-accent80: #3596c0;

    --link-color: #386989;
    --link-color-hover: #4c9ce2;
  }
}

:root.theme-light {
  --color-scheme: 1;
  --color00: #fff;
  --color10: #f5f5f5;
  --color20: #e0e0e0;
  --color30: #b8b8b8;
  --color40: #999;
  --color50: #7a7a7a;
  --color60: #5c5c5c;
  --color70: #3d3d3d;
  --color80: #292929;
  --color90: #141414;
  --color100: #000;
  --color-accent50: #2881b1;
  --color-accent60: #41b6e9;
  --color-accent80: #3596c0;

  --link-color: #386989;
  --link-color-hover: #4c9ce2;
}

html {
  color: var(--color100);
  background-color: var(--color00);
}

body {
  margin: 0;
}

#root {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

main {
  width: 100%;
  margin: 0 1rem;
  margin-bottom: auto;
  display: flex;
  flex-direction: column;
}

/* Page Main */
.header {
  box-sizing: border-box;
  text-align: center;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  padding: 0.5rem 1rem;
  background-color: var(--color20);
}

.header a {
  font-size: 1.4rem;
  text-decoration: none;
  color: var(--color100);
}

.header__right {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.preview {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.footer {
  box-sizing: border-box;
  text-align: center;
  width: 100%;
  margin: 2rem 1rem 0;
  padding: 0.5rem 1rem;
  background-color: var(--color20);
}

a {
  color: var(--link-color);
  text-decoration: none;
  transition-duration: 250ms;
}

a:hover {
  color: var(--link-color-hover);
}

.badge_list li {
  margin: 0.5rem;
}

.header__logo {
  width: 2.8rem;
  height: 2.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000000;
  border-radius: 50%;

  & img {
    width: 1.8rem;
    height: 1.8rem;
  }
}

.header__title {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.header__theme {
  width: 1.8rem;
  height: 1.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  z-index: 100;

  &:hover {
    opacity: 0.5;
  }
}

.header__theme img {
  width: 1.8rem;
  height: 1.8rem;
}

.header__theme input[type='checkbox'] {
  display: none;
}

.home__main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.home__welcome,
.home__constructor,
.home__examples {
  width: 100%;
  box-sizing: border-box;
  padding: 0.5rem;
  text-align: center;
}

@media (min-width: 840px) {
  .home__main {
    align-items: start;
  }

  .home__welcome,
  .home__examples {
    width: calc(100% - 25rem);
  }

  .home__constructor {
    width: 25rem;
    height: calc(100vh - 9rem);
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 5rem;
    right: 0;
    overflow-y: auto;
  }

  .home__examples::after {
    content: '';
    position: absolute;
    top: 0;
    right: 25rem;
    width: 1px;
    height: 100vh;
    background-color: var(--color20);
  }
}

.list__badges {
  list-style: none;
  margin: 0 auto;
  padding: 0;
}

.home__badge_item {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
}

.home__code {
  word-break: break-all;
}

.home__title {
  text-align: center;
}

.home__form {
  padding: 1rem 0;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  flex-wrap: wrap;

  & > div {
    flex: 1 0 3rem;
  }

  & > .primary {
    width: 100%;
  }

  & > .home__stack_btns_container {
    flex: 1 0 1rem;
    display: flex;
    gap: 0.5rem;
  }
}

.home__fields {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  flex-wrap: wrap;

  & > div {
    flex: 1 0 3rem;
  }
}

.copy__container {
  & > .input {
    box-sizing: border-box;
    padding-right: 1.4rem;
    text-align: start;
    word-break: break-all;
  }
}

.copy {
  position: absolute;
  width: 1rem;
  height: 1rem;
  right: 0.5rem;
  top: calc(50% - 0.5rem);
}

.copy__icon {
  filter: invert(var(--color-scheme));
}

@keyframes fadeInOut {
  0% {
    opacity: 0;
    top: -1rem;
  }
  20% {
    opacity: 1;
    top: -2rem;
  }
  80% {
    opacity: 1;
    top: -2rem;
  }
  100% {
    opacity: 0;
    top: -1rem;
  }
}

.home__result_img {
  margin: 1rem auto;
}

/* Button */
button,
input,
select,
textarea {
  outline: none;
}

.button {
  display: block;
  min-width: 7em;
  padding: 0.4em;
  border: none;
  margin: 0 auto;
  cursor: pointer;
  font-size: 1rem;
  transition: background-color 0.25s linear;
}
.button.primary {
  background-color: var(--color-accent60);
}
.button.secondary {
  background-color: var(--color40);
}
/* ... */

